video: stream: add TimestampFromFrames
Signed-off-by: BigfootACA <bigfoot@classfun.cn>

--- a/src/video/stream/meson.build
+++ b/src/video/stream/meson.build
@@ -2,6 +2,7 @@ webrtc_kvm_src += files([
 	'config.cpp',
 	'device.cpp',
 	'event.cpp',
+	'generic.cpp',
 	'input.cpp',
 	'poll.cpp',
 	'start.cpp',
