--- a/src/video/v4l2/meson.build
+++ b/src/video/v4l2/meson.build
@@ -1,8 +1,8 @@
 webrtc_kvm_src += files([
-	'media.cpp',
 	'v4l2.cpp',
 ])
 subdir('cap')
 subdir('dev')
 subdir('m2m')
+subdir('media')
 subdir('out')
