add tested configs for devices
Signed-off-by: BigfootACA <bigfoot@classfun.cn>

--- a/meson.build
+++ b/meson.build
@@ -35,6 +35,7 @@ libbrotlidec = dependency('libbrotlidec', required: false, static: static_link)
 libbrotlienc = dependency('libbrotlienc', required: false, static: static_link)
 bzip2 = dependency('bzip2', required: false, static: static_link)
 pam = dependency('pam', required: false, static: static_link)
+x264 = dependency('x264', required: false, static: static_link)
 systemd = dependency('systemd', required: false)
 if systemd.found()
     systemd_system_unit_dir = systemd.get_variable('systemdsystemunitdir')
@@ -90,6 +91,7 @@ webrtc_kvm = executable(
         libbrotlienc,
         bzip2,
         pam,
+        x264,
     ],
     link_args: link_args,
     link_language: 'cpp',
