meson.build: split sources
Signed-off-by: BigfootACA <bigfoot@classfun.cn>

--- a/src/gadget/meson.build
+++ b/src/gadget/meson.build
@@ -1,6 +1,8 @@
-webrtc_kvm_src += files([
+webrtc_kvm_src_gadget = files([
 	'input.cpp',
 	'initialize.cpp',
 ])
 subdir('core')
+webrtc_kvm_src_gadget += webrtc_kvm_src_gadget_core
 subdir('functions')
+webrtc_kvm_src_gadget += webrtc_kvm_src_gadget_functions
