--- a/src/http/auth/meson.build
+++ b/src/http/auth/meson.build
@@ -1,9 +1,9 @@
-webrtc_kvm_src += files([
+webrtc_kvm_src_http_auth = files([
 	'authorization.cpp',
 	'password.cpp'
 ])
 if pam.found()
-	webrtc_kvm_src += files(['pam.cpp'])
+	webrtc_kvm_src_http_auth += files(['pam.cpp'])
 else
-	webrtc_kvm_src += files(['no_pam.cpp'])
+	webrtc_kvm_src_http_auth += files(['no_pam.cpp'])
 endif
