--- a/src/video/meson.build
+++ b/src/video/meson.build
@@ -1,5 +1,11 @@
+webrtc_kvm_src_video = files([])
 subdir('factory')
+webrtc_kvm_src_video += webrtc_kvm_src_video_factory
 subdir('link')
+webrtc_kvm_src_video += webrtc_kvm_src_video_link
 subdir('list')
+webrtc_kvm_src_video += webrtc_kvm_src_video_list
 subdir('stream')
+webrtc_kvm_src_video += webrtc_kvm_src_video_stream
 subdir('v4l2')
+webrtc_kvm_src_video += webrtc_kvm_src_video_v4l2
