--- a/src/video/v4l2/meson.build
+++ b/src/video/v4l2/meson.build
@@ -1,8 +1,13 @@
-webrtc_kvm_src += files([
+webrtc_kvm_src_video_v4l2 = files([
 	'v4l2.cpp',
 ])
 subdir('cap')
+webrtc_kvm_src_video_v4l2 += webrtc_kvm_src_video_v4l2_cap
 subdir('dev')
+webrtc_kvm_src_video_v4l2 += webrtc_kvm_src_video_v4l2_dev
 subdir('m2m')
+webrtc_kvm_src_video_v4l2 += webrtc_kvm_src_video_v4l2_m2m
 subdir('media')
+webrtc_kvm_src_video_v4l2 += webrtc_kvm_src_video_v4l2_media
 subdir('out')
+webrtc_kvm_src_video_v4l2 += webrtc_kvm_src_video_v4l2_out
