string: add rtc from libdatachannel
Signed-off-by: BigfootACA <bigfoot@classfun.cn>

--- a/src/string/meson.build
+++ b/src/string/meson.build
@@ -2,6 +2,7 @@ webrtc_kvm_src_string = files([
 	'fourcc.cpp',
 	'h264_level.cpp',
 	'h264_profile.cpp',
+	'rtc.cpp',
 	'v4l2_buf_type.cpp',
 	'v4l2_memory.cpp',
 ])
