video: add simple noop driver
Signed-off-by: BigfootACA <bigfoot@classfun.cn>

--- a/src/video/meson.build
+++ b/src/video/meson.build
@@ -5,6 +5,8 @@ subdir('link')
 webrtc_kvm_src_video += webrtc_kvm_src_video_link
 subdir('list')
 webrtc_kvm_src_video += webrtc_kvm_src_video_list
+subdir('noop')
+webrtc_kvm_src_video += webrtc_kvm_src_video_noop
 subdir('stream')
 webrtc_kvm_src_video += webrtc_kvm_src_video_stream
 subdir('v4l2')
