--- a/src/video/meson.build
+++ b/src/video/meson.build
@@ -7,6 +7,8 @@ subdir('list')
 webrtc_kvm_src_video += webrtc_kvm_src_video_list
 subdir('noop')
 webrtc_kvm_src_video += webrtc_kvm_src_video_noop
+subdir('posix')
+webrtc_kvm_src_video += webrtc_kvm_src_video_posix
 subdir('stream')
 webrtc_kvm_src_video += webrtc_kvm_src_video_stream
 subdir('v4l2')
