--- a/src/gadget/meson.build
+++ b/src/gadget/meson.build
@@ -1,6 +1,7 @@
 webrtc_kvm_src_gadget = files([
 	'input.cpp',
 	'initialize.cpp',
+	'string.cpp',
 ])
 subdir('core')
 webrtc_kvm_src_gadget += webrtc_kvm_src_gadget_core
