video: meson.build: add missing rkmpp
Signed-off-by: BigfootACA <bigfoot@classfun.cn>

--- a/src/video/meson.build
+++ b/src/video/meson.build
@@ -13,3 +13,7 @@ subdir('stream')
 webrtc_kvm_src_video += webrtc_kvm_src_video_stream
 subdir('v4l2')
 webrtc_kvm_src_video += webrtc_kvm_src_video_v4l2
+if rkmpp.found() and rkvpu.found()
+    subdir('rkmpp')
+    webrtc_kvm_src_video += webrtc_kvm_src_video_rkmpp
+endif
