video: initial ffmpeg supports
Signed-off-by: BigfootACA <bigfoot@classfun.cn>

--- a/meson.build
+++ b/meson.build
@@ -125,6 +125,10 @@ webrtc_kvm = executable(
 		x264,
 		rkmpp,
 		rkvpu,
+		libavcodec,
+		libavformat,
+		libavutil,
+		libswscale,
 	],
 	link_args: link_args,
 	link_language: 'cpp',
