--- a/src/video/meson.build
+++ b/src/video/meson.build
@@ -1,6 +1,8 @@
 webrtc_kvm_src_video = files([])
 subdir('factory')
 webrtc_kvm_src_video += webrtc_kvm_src_video_factory
+subdir('ffmpeg')
+webrtc_kvm_src_video += webrtc_kvm_src_video_ffmpeg
 subdir('link')
 webrtc_kvm_src_video += webrtc_kvm_src_video_link
 subdir('list')
