--- a/src/meson.build
+++ b/src/meson.build
@@ -1,36 +1,30 @@
 subdir('abstract')
-webrtc_kvm_src += webrtc_kvm_src_abstract
-webrtc_client_src += webrtc_kvm_src_abstract
+webrtc_kvm_lib_src += webrtc_kvm_src_abstract 
 subdir('algo')
-webrtc_kvm_src += webrtc_kvm_src_algo
-webrtc_client_src += webrtc_kvm_src_algo
+webrtc_kvm_lib_src += webrtc_kvm_src_algo
 subdir('client')
-webrtc_client_src += webrtc_kvm_src_client
+webrtc_kvm_client_src += webrtc_kvm_src_client
 subdir('config')
-webrtc_kvm_src += webrtc_kvm_src_config
+webrtc_kvm_server_src += webrtc_kvm_src_config
 subdir('compress')
-webrtc_kvm_src += webrtc_kvm_src_compress
+webrtc_kvm_lib_src += webrtc_kvm_src_compress
 subdir('external')
-webrtc_kvm_src += webrtc_kvm_src_external
-webrtc_client_src += webrtc_kvm_src_external
+webrtc_kvm_lib_src += webrtc_kvm_src_external
 subdir('gadget')
-webrtc_kvm_src += webrtc_kvm_src_gadget
+webrtc_kvm_server_src += webrtc_kvm_src_gadget
 subdir('http')
-webrtc_kvm_src += webrtc_kvm_src_http
+webrtc_kvm_server_src += webrtc_kvm_src_http
 subdir('input')
-webrtc_kvm_src += webrtc_kvm_src_input
-webrtc_client_src += webrtc_kvm_src_input
+webrtc_kvm_lib_src += webrtc_kvm_src_input
 subdir('lib')
-webrtc_kvm_src += webrtc_kvm_src_lib
-webrtc_client_src += webrtc_kvm_src_lib
+webrtc_kvm_lib_src += webrtc_kvm_src_lib
 subdir('main')
-webrtc_kvm_src += webrtc_kvm_src_main
+webrtc_kvm_server_src += webrtc_kvm_src_main
 subdir('string')
-webrtc_kvm_src += webrtc_kvm_src_string
-webrtc_client_src += webrtc_kvm_src_string
+webrtc_kvm_lib_src += webrtc_kvm_src_string
 subdir('test')
-webrtc_kvm_src += webrtc_kvm_src_test
+webrtc_kvm_server_src += webrtc_kvm_src_test
 subdir('video')
-webrtc_kvm_src += webrtc_kvm_src_video
+webrtc_kvm_server_src += webrtc_kvm_src_video
 subdir('webrtc')
-webrtc_kvm_src += webrtc_kvm_src_webrtc
+webrtc_kvm_server_src += webrtc_kvm_src_webrtc
